# bittide-hardware

./: .clangd  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  bittide.drawio  cabal.project  cabal.project.freeze  cargo.sh  collect-reports.py  default.nix  download-reports.py  flake.nix  fourmolu.yaml  hie.yaml  plot.sh  plots.sh  run_test.sh  rust-toolchain.toml  shell.nix  sweep-gain.py  update-clash-vexriscv-subtree.sh  verify-firmware-arch.sh  vexriscv_sim.cfg
bittide/: Setup.lhs  bittide.cabal  bittide.cabal.license  cabal.project  default.nix  linuwial-wrap-types.css
bittide-cpus/: Setup.hs  bittide-cpus.cabal
bittide-cpus/data/: Riscv32imc.scala  Riscv32imc0.scala  Riscv32imc1.scala  Riscv32imc2.scala  Riscv32imc3.scala  Riscv32imcf.scala
bittide-experiments/: bittide-experiments.cabal
bittide-experiments/src/Bittide/: Hitl.hs  Plot.hs  Simulate.hs  Topology.hs
bittide-experiments/tests/: doctests.hs  unittests.hs
bittide-extra/: bittide-extra.cabal  default.nix
bittide-extra/dts/: example.dts
bittide-extra/src/Numeric/: Extra.hs
bittide-extra/src/Project/: Chan.hs  Handle.hs
bittide-extra/src/Protocols/: BiDf.hs  Extra.hs  ReqResp.hs  Spi.hs  TraceC.hs
bittide-extra/tests/: doctests.hs
bittide-extra/tests/doctests/: Main.hs  doctests.hs
bittide-extra/tests/unittests/: Main.hs  unittests.hs
bittide-instances/: README.md  bittide-instances.cabal
bittide-instances/data/: start.sh
bittide-instances/data-files/tcl/: clash_namespace.tcl
bittide-instances/data/binaries/: axi-loopback  hello  smoltcp-example  uart-echo
bittide-instances/data/constraints/: boardTest.xdc  boardTestExtended.xdc  clockBoardConfigTest.xdc  clockControlDemo0.xdc  clockControlDemo1.xdc  ddr4.xdc  ddr4Test.xdc  demoTest.xdc  (+31 more)
bittide-instances/demo-program/: Cargo.toml  memory.x
bittide-instances/device-trees/: hello.dts
bittide-instances/imgs/: reducePins.drawio
bittide-instances/tests/: doctests.hs  unittests.hs
bittide-rust-ffi/: Cargo.toml  Setup.lhs  bittide-rust-ffi.cabal  bittide-rust-ffi.cabal.license  hsbindgen.toml
bittide-rust-ffi/src/: lib.rs
bittide-shake/: README.md  bittide-shake.cabal
bittide-shake/exe/: Main.hs
bittide-shake/tests/: doctests.hs
bittide-tools/: bittide-tools.cabal
bittide-tools/cc-sim/: README.md
bittide/imgs/: README.md  metacycle-groupings.typ  metacycle-ugn-calculator.typ  ugn_calculator.drawio
bittide/proofs/: TypeNatProofs.agda
bittide/tests/: UnitTests.hs  doctests.hs
clash-bitpackc/: clash-bitpackc.cabal
clash-bitpackc/tests/: UnitTests.hs  doctests.hs
clash-protocols-memmap/: .gitignore  clash-protocols-memmap.cabal
clash-protocols-memmap/app/: Example.hs  HdlTest.hs
clash-protocols-memmap/src/: BitPackC.hs
clash-protocols-memmap/tests/: UnitTests.hs  doctests.hs
clash-vexriscv-sim/: bundle_test_binaries.sh  clash-vexriscv-sim.cabal
clash-vexriscv-sim/app/: HdlTest.hs  VexRiscvChainSimulation.hs  VexRiscvSimulation.hs
clash-vexriscv-sim/data/: vexriscv_chain_gdba.cfg  vexriscv_chain_gdbb.cfg  vexriscv_chain_sim.cfg  vexriscv_sim.cfg
clash-vexriscv-sim/test-programs/: Cargo.toml
clash-vexriscv-sim/tests/: tests.hs
clash-vexriscv/clash-vexriscv/: Makefile  Setup.hs  clash-vexriscv.cabal
clash-vexriscv/clash-vexriscv-sim/: clash-vexriscv-sim.cabal
contranomy/: README.md  Setup.hs  a.out  cabal.project  contranomy.cabal  default.nix  output.txt  stack.yaml  test.c
contranomy-sim/: README.md  contranomy-sim.cabal
contranomy-sim/devicetree/: contranomy-sim.dts
contranomy-sim/tests/: tests.hs
contranomy/src/: Contranomy.hs  ReadElf.hs
contranomy/tests/: tests.hs
demo-1/demo1-sim/: README.md  demo1-sim.cabal
demo-1/ping-pong-management/: Cargo.toml  build.rs  memory.x
elastic-buffer-sim/: .gitignore  README.md  SIMULATE.md  Setup.hs  TH.md  cabal.project  elastic-buffer-sim.cabal  genplots.py  pyproject.toml  script.py
elastic-buffer-sim/exe/: Main.hs
elastic-buffer-sim/plot/: Main.hs
elastic-buffer-sim/tests/: doctests.hs  unittests.hs
firmware-binaries/: Cargo.lock.license  Cargo.toml
firmware-binaries/.cargo/: config.toml
firmware-binaries/clock-board/: Cargo.toml  build.rs
firmware-binaries/clock-control/: Cargo.toml  build.rs  memory.x
firmware-binaries/clock-control-reg-cpy/: Cargo.toml  memory.x  rust-toolchain.toml
firmware-binaries/clock-control-swcctopologies/: Cargo.toml
firmware-binaries/fmc-clock/: Cargo.toml  memory.x
firmware-binaries/gppe-switch-demo/: Cargo.toml  build.rs
firmware-binaries/management-unit/: Cargo.toml  build.rs  memory.x
firmware-binaries/processing-element-test/: Cargo.toml  build.rs  memory.x
firmware-binaries/soft-ugn-gppe/: Cargo.toml  build.rs
firmware-binaries/soft-ugn-mu/: Cargo.toml  build.rs
firmware-support/: Cargo.lock.license  Cargo.toml
firmware-support/.cargo/: config.toml
firmware-support/bittide-build-utils/: Cargo.toml
firmware-support/bittide-cpus/: Cargo.toml
firmware-support/bittide-hal/: .gitignore  Cargo.toml  build.rs
firmware-support/bittide-hal-c/: .gitignore  Cargo.toml  README.md  build.rs  run_tests.sh
firmware-support/bittide-macros/: Cargo.toml
firmware-support/bittide-sys/: Cargo.toml
firmware-support/clash-num/: Cargo.toml
firmware-support/embedded-std/: Cargo.toml
firmware-support/extension-checks/: Cargo.toml  README.md
firmware-support/gdb-trace/: Cargo.toml
firmware-support/memmap-generate/: Cargo.toml
gdb-adapters/: Cargo.toml
gdb-adapters/.cargo/: config.toml
gdb-adapters/src/: main.rs
gdb-hs/: gdb-hs.cabal
gdb-hs/src/: Gdb.hs
gdb-hs/tests/: doctests.hs  unittests.hs
ghc-typelits-extra-lemmas/: README.md  ghc-typelits-extra-lemmas.cabal
vex-riscv/: .gitignore  Makefile  vex-riscv.cabal
vex-riscv/app/: Test.hs
vex-riscv/bittide-cpu/: .gitignore  build.sbt
vex-riscv/src/: VexRiscv.hs
vex-riscv/tests/: tests.hs
vex-riscv/vex-test-programs/: Cargo.toml
vivado-hs/: vivado-hs.cabal
vivado-hs/src/: Vivado.hs
vivado-hs/tests/: doctests.hs  unittests.hs
(+1416 files in other folders)
