# SPDX-FileCopyrightText: 2022 Google LLC
#
# SPDX-License-Identifier: CC0-1.0


[profile.release]
# Optimize for size
opt-level = "z"
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[workspace]
members = [
  "firmware/bittide-sys",
  "firmware/examples/fdt-read",
  "firmware/examples/hello",
  "firmware/examples/uart-echo",
]
resolver = "2"
