cabal-version: 3.4
name: bittide-cpus
version: 0.1.0.0
license: Apache-2.0
license-file: LICENSE
author: QBayLogic B.V.
maintainer: devops@qbaylogic.com
category: Development
build-type: Custom
extra-source-files:
  data/*.scala

custom-setup
  setup-depends:
    Cabal,
    base,
    clash-vexriscv,

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules: Bittide.Cpus.Riscv32imc
  other-modules: VexRiscv_Riscv32imc
  autogen-modules: VexRiscv_Riscv32imc
  build-depends:
    base ^>=4.20.0.0,
    clash-prelude,
    clash-vexriscv,

  hs-source-dirs: src
  default-language: Haskell2010
