cabal-version:       2.4
name:                bittide-experiments
synopsis:            Infrastructure and configurations needed for running
                     experiments with the Bittide systems under development
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2024 Google LLC

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.7.0 && < 1.10,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

library
  import: common-options
  hs-source-dirs: src
  build-depends:
    aeson,
    aeson-pretty,
    array,
    bittide,
    bytestring,
    cassava,
    clash-cores,
    clash-lib,
    containers,
    filepath,
    happy-dot,
    matplotlib,
    optparse-applicative,
    random,
    text,
    typelits-witnesses
  exposed-modules:
    Bittide.Hitl
    Bittide.Plot
    Bittide.Simulate
    Bittide.Simulate.ElasticBuffer
    Bittide.Simulate.Topology
    Bittide.Topology
  default-language: Haskell2010

test-suite unittests
  import:           common-options
  type:             exitcode-stdio-1.0
  main-is:          unittests.hs
  ghc-options:      -Wall -Wcompat -threaded
                    -rtsopts "-with-rtsopts=-N -xm20000000" +RTS -xm20000000 -RTS
  default-language: Haskell2010
  hs-source-dirs:   tests
  other-modules:
    Tests.Bittide.Simulate
  build-depends:
      base
    , bittide
    , bittide-experiments
    , clash-prelude
    , tasty
    , tasty-hedgehog
    , tasty-hunit

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  ghc-options:      -threaded
  ghc-options:      -Wall -Wcompat -threaded
                    -rtsopts "-with-rtsopts=-xm20000000" +RTS -xm20000000 -RTS
  build-depends:
    base,
    bittide-experiments,
    doctest-parallel >= 0.3.0.1 && < 0.4,
  default-language: Haskell2010
