cabal-version: 2.4
name: bittide-experiments
synopsis:
  Infrastructure and configurations needed for running
  experiments with the Bittide systems under development

version: 0.1
license: Apache-2.0
license-file: LICENSE
author: QBayLogic B.V.
maintainer: devops@qbaylogic.com
copyright: Copyright © 2024 Google LLC

common common-options
  default-extensions:
    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    --
    -- `NoImplicitPrelude` is used because Clash offers Clash.Prelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    NoImplicitPrelude
    NoStarIsType
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -- Plugins to support type-level constraint solving on naturals:
    --   - GHC.TypeLits.Extra.Solver
    --   - GHC.TypeLits.Normalise
    --   - GHC.TypeLits.KnownNat.Solver
    -- Clash needs access to the source code in compiled modules:
    --   -fexpose-all-unfoldings
    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    --   -fno-worker-wrapper
    -Wall
    -Wcompat
    -haddock
    -fplugin=GHC.TypeLits.Extra.Solver
    -fplugin=GHC.TypeLits.Normalise
    -fplugin=GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  build-depends:
    -- clash-prelude will set suitable version bounds for the plugins
    Cabal,
    base,
    clash-prelude >=1.7.0 && <1.10,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    template-haskell,

library
  import: common-options
  hs-source-dirs: src
  build-depends:
    aeson,
    aeson-pretty,
    array,
    bittide,
    bytestring,
    cassava,
    clash-cores,
    clash-lib,
    containers,
    data-default,
    directory,
    extra,
    filepath,
    happy-dot,
    http-conduit,
    http-types,
    matplotlib,
    optparse-applicative,
    process,
    random,
    temporary,
    text,
    typelits-witnesses,
    vector,
    vivado-hs,

  exposed-modules:
    Bittide.Github.Artifacts
    Bittide.Hitl
    Bittide.Plot
    Bittide.Report.ClockControl
    Bittide.Simulate.Config
    Bittide.Topology

  default-language: Haskell2010

test-suite unittests
  import: common-options
  type: exitcode-stdio-1.0
  main-is: unittests.hs
  ghc-options:
    -Wall
    -Wcompat
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language: Haskell2010
  hs-source-dirs: tests
  build-depends:
    base,
    bittide,
    bittide-experiments,
    clash-prelude,
    tasty,
    tasty-hedgehog,
    tasty-hunit,

test-suite doctests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: doctests.hs
  ghc-options: -threaded
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  build-depends:
    base,
    bittide-experiments,
    doctest-parallel >=0.3.0.1 && <0.4,
    word8,

  default-language: Haskell2010
