cabal-version: 2.4
name: bittide-extra
version: 0.1
license: Apache-2.0
license-file: LICENSE
author: QBayLogic B.V.
maintainer: devops@qbaylogic.com
copyright: Copyright © 2022-2024 Google LLC

common common-options
  default-extensions:
    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    --
    -- `NoImplicitPrelude` is used because Clash offers Clash.Prelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoImplicitPrelude
    NoStarIsType
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -- Plugins to support type-level constraint solving on naturals:
    --   - GHC.TypeLits.Extra.Solver
    --   - GHC.TypeLits.Normalise
    --   - GHC.TypeLits.KnownNat.Solver
    -- Clash needs access to the source code in compiled modules:
    --   -fexpose-all-unfoldings
    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    --   -fno-worker-wrapper
    -Wall
    -Wcompat
    -fplugin=GHC.TypeLits.Extra.Solver
    -fplugin=GHC.TypeLits.Normalise
    -fplugin=GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  default-language: Haskell2010
  build-depends:
    -- clash-prelude will set suitable version bounds for the plugins
    Cabal,
    array,
    base,
    clash-prelude >=1.6.3 && <1.10,
    clash-protocols,
    containers >=0.4.0 && <0.7,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    template-haskell,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Bittide.Extra.Maybe
    Bittide.Extra.Wishbone
    Clash.Explicit.Signal.Extra
    Clash.Sized.Vector.Extra
    Numeric.Extra
    Protocols.Extra

test-suite unittests
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests/unittests
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  hs-source-dirs: tests/doctests
  other-modules:
    Tests.Numeric.Extra

  build-depends:
    base,
    bittide-extra,
    clash-prelude,
    clash-prelude-hedgehog,
    hedgehog,
    tasty,
    tasty-hedgehog,
    tasty-th,

test-suite doctests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  hs-source-dirs: tests/doctests
  build-depends:
    base,
    bittide-extra,
    doctest-parallel >=0.3.0.1 && <0.4,
    filepath,
