cabal-version: 3.8
name: bittide-extra
version: 0.1
license: Apache-2.0
license-file: LICENSE
author: QBayLogic B.V.
maintainer: devops@qbaylogic.com
copyright: Copyright © 2022-2024 Google LLC

-- One day we'll be able to replace this by 'default-language: GHC2024' and
-- disabling a few extensions :)
common ghc2024
  default-extensions:
    -- GHC2024, excluding:
    -- ImplicitPrelude:          We want Clash.Prelude
    -- ImplicitStagePersistence: Not a thing yet in the GHC we use
    -- ImportQualifiedPost:      Okay on its own, but trips up fourmolu
    -- StarIsType:               We want '*' to mean multiplication on type level
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DisambiguateRecordFields
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FieldSelectors
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GADTs
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MonoLocalBinds
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

common clash
  -- TemplateHaskell is used to support convenience functions such as
  -- 'listToVecTH' and 'bLit'.
  --
  -- `NoImplicitPrelude` is used because Clash offers Clash.Prelude
  default-extensions:
    NoImplicitPrelude
    NoStarIsType
    QuasiQuotes
    TemplateHaskell

  ghc-options:
    -- Plugins to support type-level constraint solving on naturals:
    --   - GHC.TypeLits.Extra.Solver
    --   - GHC.TypeLits.Normalise
    --   - GHC.TypeLits.KnownNat.Solver
    --
    -- Clash needs access to the source code in compiled modules:
    --   -fexpose-all-unfoldings
    --
    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    --   -fno-worker-wrapper
    --
    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables the optimization:
    --   -fno-unbox-small-strict-fields
    --   -fno-unbox-strict-fields
    -Wall
    -Wcompat
    -fplugin=GHC.TypeLits.Extra.Solver
    -fplugin=GHC.TypeLits.Normalise
    -fplugin=GHC.TypeLits.KnownNat.Solver
    -fplugin=Protocols.Plugin
    -fconstraint-solver-iterations=20
    -fexpose-all-unfoldings
    -fno-worker-wrapper
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields

  build-depends:
    clash-protocols,
    ghc-typelits-extra >=0.4.4,
    ghc-typelits-knownnat >=0.7.7,
    ghc-typelits-natnormalise >=0.7.7,

common extra
  default-extensions:
    DefaultSignatures
    DeriveAnyClass
    ImplicitParams
    OverloadedRecordDot
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall
    -Wcompat

common sane-records
  default-extensions:
    DisambiguateRecordFields
    DuplicateRecordFields
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot

library
  import: ghc2024, clash, extra, sane-records
  hs-source-dirs: src
  build-depends:
    async,
    base,
    bytestring,
    clash-cores,
    clash-prelude,
    clash-protocols,
    clash-protocols-memmap,
    containers,
    exceptions,
    extra,
    lifted-base,
    monad-control,
    tasty-hunit,
    time,
    word8,

  exposed-modules:
    Bittide.Extra.Maybe
    Bittide.Extra.Wishbone
    Clash.Cores.Xilinx.Xpm.Cdc.Extra
    Clash.Explicit.Signal.Extra
    Clash.Sized.Vector.Extra
    Control.Concurrent.Async.Extra
    Control.Exception.Extra
    Data.List.Extra
    Numeric.Extra
    Project.Handle
    Protocols.Df.Extra
    Protocols.Extra
    Protocols.Spi
    Protocols.Wishbone.Extra
    System.Timeout.Extra

test-suite unittests
  import: ghc2024, clash, extra, sane-records
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests/unittests
  default-language: Haskell2010
  ghc-options: -threaded
  other-modules:
    Tests.Clash.Cores.Xilinx.Xpm.Cdc.Extra
    Tests.Numeric.Extra
    Tests.Protocols.Df.Extra

  build-depends:
    base,
    bittide-extra,
    clash-prelude,
    clash-prelude-hedgehog,
    hedgehog,
    tasty,
    tasty-hedgehog,
    tasty-th,

test-suite doctests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  hs-source-dirs: tests/doctests
  build-depends:
    base,
    bittide-extra,
    doctest-parallel >=0.3.0.1,
    filepath,
