cabal-version: 2.4
name: bittide-instances
synopsis:
  Top-entities for synthesis fixing target specific
  parameters and connecting independent components to
  architectures

version: 0.1
license: Apache-2.0
license-file: LICENSE
author: QBayLogic B.V.
maintainer: devops@qbaylogic.com
copyright: Copyright © 2022-2024 Google LLC
data-files:
  -- Cabal is very picky about wildcards in `data-files`:
  -- https://cabal.readthedocs.io/en/3.6/cabal-package.html#pkg-field-data-files
  data/**/*.gdb
  data/**/*.sh
  data/**/*.xdc
  data/**/*.yml

common common-options
  default-extensions:
    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    --
    -- `NoImplicitPrelude` is used because Clash offers Clash.Prelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoImplicitPrelude
    NoStarIsType
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -- Plugins to support type-level constraint solving on naturals:
    --   - GHC.TypeLits.Extra.Solver
    --   - GHC.TypeLits.Normalise
    --   - GHC.TypeLits.KnownNat.Solver
    -- Clash needs access to the source code in compiled modules:
    --   -fexpose-all-unfoldings
    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    --   -fno-worker-wrapper
    -Wall
    -Wcompat
    -fplugin=GHC.TypeLits.Extra.Solver
    -fplugin=GHC.TypeLits.Normalise
    -fplugin=GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  default-language: Haskell2010
  build-depends:
    MissingH,
    aeson,
    async,
    base,
    base16-bytestring,
    bittide,
    bittide-experiments,
    bittide-extra,
    bytestring,
    cassava,
    clash-cores,
    clash-lib,
    clash-prelude,
    clash-protocols,
    clash-vexriscv,
    constraints >=0.13.3 && <0.15,
    containers,
    cryptohash-sha256,
    directory,
    extra,
    filepath,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    lift-type,
    network-simple,
    pretty-simple,
    process,
    shake,
    split,
    streaming,
    streaming-bytestring,
    string-interpolate,
    tasty,
    tasty-hunit,
    tasty-th,
    template-haskell,
    temporary,
    text,
    time,
    unix,
    vector,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Bittide.Instances.Domains
    Bittide.Instances.Hacks
    Bittide.Instances.Hitl.BoardTest
    Bittide.Instances.Hitl.DnaOverSerial
    Bittide.Instances.Hitl.Ethernet
    Bittide.Instances.Hitl.FincFdec
    Bittide.Instances.Hitl.IlaPlot
    Bittide.Instances.Hitl.LinkConfiguration
    Bittide.Instances.Hitl.Post.BoardTestExtended
    Bittide.Instances.Hitl.Post.PostProcess
    Bittide.Instances.Hitl.Post.TcpServer
    Bittide.Instances.Hitl.Setup
    Bittide.Instances.Hitl.SwCcTopologies
    Bittide.Instances.Hitl.SyncInSyncOut
    Bittide.Instances.Hitl.TemperatureMonitor
    Bittide.Instances.Hitl.Tests
    Bittide.Instances.Hitl.Transceivers
    Bittide.Instances.Hitl.VexRiscv
    Bittide.Instances.Pnr.Calendar
    Bittide.Instances.Pnr.ClockControl
    Bittide.Instances.Pnr.Counter
    Bittide.Instances.Pnr.ElasticBuffer
    Bittide.Instances.Pnr.Ethernet
    Bittide.Instances.Pnr.ProcessingElement
    Bittide.Instances.Pnr.ScatterGather
    Bittide.Instances.Pnr.Si539xSpi
    Bittide.Instances.Pnr.StabilityChecker
    Bittide.Instances.Pnr.Synchronizer
    Paths.Bittide.Instances
    Project.Handle
    Project.Programs

  other-modules:
    Paths_bittide_instances

  autogen-modules:
    Paths_bittide_instances

test-suite doctests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: doctests.hs
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  build-depends:
    base,
    bittide-instances,
    doctest-parallel >=0.3.0.1,

  default-language: Haskell2010

test-suite unittests
  import: common-options
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: unittests.hs
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  other-modules:
    Tests.ClockControlWb
    Tests.OverflowResistantDiff
    Wishbone.Axi
    Wishbone.CaptureUgn
    Wishbone.DnaPortE2
    Wishbone.Time

  build-depends:
    HUnit,
    bittide-instances,
    clash-prelude-hedgehog >=1.6 && <1.10,
    filepath,
    hedgehog >=1.0 && <1.5,
    parsec,
    pretty-simple,
    tasty,
    tasty-golden,
    tasty-hedgehog >=1.2 && <1.5,
    tasty-th,

executable clash
  import: common-options
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  main-is: exe/clash/Main.hs
  build-depends:
    bittide-instances,
    clash-ghc,
    vivado-hs,

executable post-board-test-extended
  import: common-options
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  main-is: exe/post-board-test-extended/Main.hs
  build-depends:
    Glob,
    bittide-instances,
    filepath,

executable post-vex-riscv-test
  import: common-options
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  main-is: exe/post-vex-riscv-test/Main.hs
  build-depends:
    bittide-instances,
    extra,
    process,
    tasty,
    tasty-hunit,
    tasty-th,
    temporary,

  other-modules: Paths_bittide_instances

executable post-vex-riscv-tcp-test
  import: common-options
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  main-is: exe/post-vex-riscv-tcp-test/Main.hs
  build-depends:
    bittide-instances,
    extra,
    process,
    tasty,
    tasty-hunit,
    tasty-th,
    temporary,

  other-modules: Paths_bittide_instances

executable post-dna-over-serial
  import: common-options
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  main-is: exe/post-dna-over-serial/Main.hs
  build-depends:
    bittide-instances,
    process,
    tasty,
    tasty-hunit,
    tasty-th,

  other-modules: Paths_bittide_instances
