cabal-version: 2.4
name: bittide-instances
synopsis:
  Top-entities for synthesis fixing target specific
  parameters and connecting independent components to
  architectures

version: 0.1
license: Apache-2.0
license-file: LICENSE
author: QBayLogic B.V.
maintainer: devops@qbaylogic.com
copyright: Copyright © 2022-2024 Google LLC
data-files:
  -- Cabal is very picky about wildcards in `data-files`:
  -- https://cabal.readthedocs.io/en/3.6/cabal-package.html#pkg-field-data-files
  data/**/*.gdb
  data/**/*.sh
  data/**/*.xdc
  data/**/*.yml

flag sim-baud-rate
  description: Use the maximum domain allowed baud rate for simulating uart circuits.
  default: False
  manual: True

common common-options
  default-extensions:
    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    --
    -- `NoImplicitPrelude` is used because Clash offers Clash.Prelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoImplicitPrelude
    NoStarIsType
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -- Plugins to support type-level constraint solving on naturals:
    --   - GHC.TypeLits.Extra.Solver
    --   - GHC.TypeLits.Normalise
    --   - GHC.TypeLits.KnownNat.Solver
    -- Clash needs access to the source code in compiled modules:
    --   -fexpose-all-unfoldings
    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    --   -fno-worker-wrapper
    -Wall
    -Wcompat
    -fplugin=GHC.TypeLits.Extra.Solver
    -fplugin=GHC.TypeLits.Normalise
    -fplugin=GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  default-language: Haskell2010
  build-depends:
    Glob,
    MissingH,
    aeson,
    async,
    base,
    base16-bytestring,
    bittide,
    bittide-experiments,
    bittide-extra,
    bytestring,
    cassava,
    clash-cores,
    clash-lib,
    clash-prelude,
    clash-protocols,
    clash-protocols-memmap,
    clash-vexriscv,
    clock,
    constraints >=0.13.3 && <0.15,
    containers,
    cryptohash-sha256,
    deepseq,
    directory,
    exceptions,
    extra,
    filepath,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    lift-type,
    network-simple,
    pretty-simple,
    process,
    shake,
    split,
    streaming,
    streaming-bytestring,
    string-interpolate,
    tasty,
    tasty-hunit,
    tasty-th,
    template-haskell,
    temporary,
    text,
    time,
    unix,
    vector,
    vivado-hs,
    word8,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Bittide.Instances.Domains
    Bittide.Instances.Hacks
    Bittide.Instances.Hitl.BoardTest
    Bittide.Instances.Hitl.DnaOverSerial
    Bittide.Instances.Hitl.Driver.DnaOverSerial
    Bittide.Instances.Hitl.Driver.SwCcTopologies
    Bittide.Instances.Hitl.Driver.VexRiscv
    Bittide.Instances.Hitl.Driver.VexRiscvTcp
    Bittide.Instances.Hitl.Ethernet
    Bittide.Instances.Hitl.FincFdec
    Bittide.Instances.Hitl.IlaPlot
    Bittide.Instances.Hitl.LinkConfiguration
    Bittide.Instances.Hitl.Post.BoardTestExtended
    Bittide.Instances.Hitl.Post.PostProcess
    Bittide.Instances.Hitl.Setup
    Bittide.Instances.Hitl.SwCcTopologies
    Bittide.Instances.Hitl.SyncInSyncOut
    Bittide.Instances.Hitl.TemperatureMonitor
    Bittide.Instances.Hitl.Tests
    Bittide.Instances.Hitl.Transceivers
    Bittide.Instances.Hitl.Utils.Gdb
    Bittide.Instances.Hitl.Utils.Program
    Bittide.Instances.Hitl.Utils.Vivado
    Bittide.Instances.Hitl.VexRiscv
    Bittide.Instances.Pnr.Calendar
    Bittide.Instances.Pnr.Counter
    Bittide.Instances.Pnr.ElasticBuffer
    Bittide.Instances.Pnr.Ethernet
    Bittide.Instances.Pnr.ProcessingElement
    Bittide.Instances.Pnr.ScatterGather
    Bittide.Instances.Pnr.Si539xSpi
    Bittide.Instances.Pnr.StabilityChecker
    Bittide.Instances.Pnr.Synchronizer
    Paths.Bittide.Instances
    Project.Handle

  other-modules:
    Paths_bittide_instances

  autogen-modules:
    Paths_bittide_instances

  if flag(sim-baud-rate)
    cpp-options: -DSIM_BAUD_RATE

test-suite doctests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: doctests.hs
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  build-depends:
    base,
    bittide-instances,
    doctest-parallel >=0.3.0.1,

  default-language: Haskell2010

test-suite unittests
  import: common-options
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: unittests.hs
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  other-modules:
    Tests.ClockControlWb
    Tests.OverflowResistantDiff
    Wishbone.Axi
    Wishbone.CaptureUgn
    Wishbone.DnaPortE2
    Wishbone.ScatterGather
    Wishbone.SwitchDemoProcessingElement
    Wishbone.Time
    Wishbone.Watchdog

  build-depends:
    HUnit,
    bittide-instances,
    clash-prelude-hedgehog >=1.6 && <1.10,
    filepath,
    hedgehog >=1.0 && <1.5,
    parsec,
    pretty-simple,
    tasty,
    tasty-golden,
    tasty-hedgehog >=1.2 && <1.5,
    tasty-th,

executable clash
  import: common-options
  ghc-options:
    -Wall
    -Wcompat
    -threaded

  main-is: exe/clash/Main.hs
  build-depends:
    bittide-instances,
    clash-ghc,
    vivado-hs,
